# Sprawl

./: .gitignore  .sprawl.toml  CHANGELOG.md  Cargo.toml  audit.toml  build_plugins.sh  scratch  scratch.rs  test.sh  test_out.txt
.github/workflows/: ci.yml  release.yml
Documents/: 15_ARCHITECTURAL_DECISIONS.md  SPRAWL_ADR_LOG.md  SPRAWL_CONFIG_SCHEMA_REFERENCE.md  SPRAWL_DESIGN_SPEC_v1.2.md  SPRAWL_HANDOVER_CONTEXT.md  SPRAWL_PLUGIN_ABI_SPEC.md  SPRAWL_PRD.md  SPRAWL_RELEASE_MIGRATION_POLICY.md  SPRAWL_TEST_PLAN.md  SPRAWL_THREAT_MODEL.md  SPRAWL_TRD.md  SPRAWL_USER_FLOWS.md  SPRAWL_UX_UI_GUIDE.md
crates/sprawl-archaeologist/: Cargo.toml
crates/sprawl-archaeologist/src/: analyze.rs  bundle.rs  lib.rs
crates/sprawl-archaeologist/tests/: plugin_integration_test.rs
crates/sprawl-archivist/: Cargo.toml
crates/sprawl-archivist/src/: embedding.rs  lance_db.rs  lib.rs
crates/sprawl-cli/: Cargo.toml
crates/sprawl-cli/src/: config.rs  main.rs
crates/sprawl-cli/src/commands/: analyze.rs  ask.rs  bundle.rs  daemon.rs  index.rs  mod.rs  models.rs  plugin.rs  profile_machine.rs  project.rs  restore.rs  resurrect.rs  scan.rs  search.rs  simulate_revoke.rs  status.rs  triage.rs  verify.rs
crates/sprawl-core/: Cargo.toml
crates/sprawl-core/src/: error.rs  fs.rs  lib.rs  migrations.rs  platform.rs  types.rs
crates/sprawl-core/src/config/: domain.rs  mod.rs  predicate.rs  presets.rs
crates/sprawl-core/src/ledger/: crypto.rs  keyring_store.rs  mod.rs  schema.rs
crates/sprawl-core/src/manifest/: mod.rs
crates/sprawl-daemon/: Cargo.toml
crates/sprawl-daemon/benches/: cpu_idle_bench.rs
crates/sprawl-daemon/src/: ipc.rs  lib.rs  process.rs  watcher.rs
crates/sprawl-dev/: Cargo.toml
crates/sprawl-dev/src/: data.rs  lib.rs
crates/sprawl-inference/: Cargo.toml
crates/sprawl-inference/src/: lib.rs  test_candle.rs
crates/sprawl-plugin-host/: Cargo.toml
crates/sprawl-plugin-host/fuzz/: Cargo.toml
crates/sprawl-plugin-host/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/sprawl-plugin-host/src/: lib.rs  verify.rs
crates/sprawl-sentinel/: Cargo.toml
crates/sprawl-sentinel/src/: classify.rs  entropy.rs  lib.rs  llm.rs  scanner.rs  verify.rs
crates/sprawl-sweeper/: Cargo.toml
crates/sprawl-sweeper/benches/: safety_gate_bench.rs
crates/sprawl-sweeper/src/: engine.rs  lib.rs  safety_gate.rs
crates/sprawl-tui/: Cargo.toml
crates/sprawl-tui/src/: app.rs  events.rs  lib.rs  theme.rs  ui.rs
crates/sprawl-tui/src/views/: ask.rs  mod.rs  search.rs  sentinel.rs
plugins/: COMMUNITY.md  Cargo.toml
plugins/go-detector/: Cargo.toml
plugins/go-detector/src/: bindings.rs  lib.rs
plugins/go-detector/wit/: world.wit
plugins/node-detector/: Cargo.toml
plugins/node-detector/src/: lib.rs
plugins/node-detector/wit/: world.wit
plugins/python-detector/: Cargo.toml
plugins/python-detector/src/: lib.rs
plugins/python-detector/wit/: world.wit
plugins/rust-detector/: Cargo.toml
plugins/rust-detector/src/: lib.rs
plugins/rust-detector/wit/: world.wit
plugins/wit/: stack-detector.wit
scripts/: fetch_model_hash.sh  run_inference_tests.sh  verify_fixes.sh
tests/: Cargo.toml
tests/fixtures/: mod.rs
tests/integration/: archivist_real_test.rs  cli_commands_test.rs  config_merge_test.rs  daemon_lifecycle_test.rs  inference_real_test.rs  ipc_test.rs  profile_machine_test.rs  resurrect_test.rs  sentinel_scan_test.rs  sqlite_ledger_test.rs  sweeper_restore_test.rs  tui_state_test.rs
tests/safety_gate/: matrix_test.rs
