[package]
name = "sprawl-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "fixtures"
path = "fixtures/mod.rs"

[[test]]
name = "matrix_test"
path = "safety_gate/matrix_test.rs"

[[test]]
name = "daemon_lifecycle_test"
path = "integration/daemon_lifecycle_test.rs"

[[test]]
name = "sweeper_restore_test"
path = "integration/sweeper_restore_test.rs"

[[test]]
name = "sentinel_scan_test"
path = "integration/sentinel_scan_test.rs"

[[test]]
name = "inference_real_test"
path = "integration/inference_real_test.rs"

[[test]]
name = "tui_state_test"
path = "integration/tui_state_test.rs"

[dependencies]
sprawl-core = { path = "../crates/sprawl-core" }
sprawl-sweeper = { path = "../crates/sprawl-sweeper" }
sprawl-sentinel = { path = "../crates/sprawl-sentinel" }
sprawl-daemon = { path = "../crates/sprawl-daemon" }
sprawl-inference = { path = "../crates/sprawl-inference" }
sprawl-tui = { path = "../crates/sprawl-tui" }
sprawl-cli = { path = "../crates/sprawl-cli" }
tempfile = "3.10"
uuid = { version = "1.2", features = ["v4"] }
tokio = { workspace = true }
anyhow = { workspace = true }
assert_cmd = "2.0.12"
predicates = "3.0.4"
serde_json = { workspace = true }

[[test]]
name = "config_merge_test"
path = "integration/config_merge_test.rs"

[[test]]
name = "cli_commands_test"
path = "integration/cli_commands_test.rs"
