[package]
name = "sprawl-archaeologist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
sprawl-plugin-host = { path = "../sprawl-plugin-host" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
ignore = "0.4.27"
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
sprawl-inference = { version = "0.1.0", path = "../sprawl-inference" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
