[package]
name = "sprawl-archivist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde = { workspace = true, optional = true }
sysinfo = "0.30"
async-trait = "0.1"

# real-archivist feature deps
lancedb = { version = "0.10", optional = true }
arrow = { version = "51.0", optional = true }
arrow-array = { version = "51.0", optional = true }
arrow-schema = { version = "51.0", optional = true }
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
tokenizers = { version = "0.19", optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }

[dev-dependencies]
tempfile = "3.10"
sprawl-dev = { path = "../sprawl-dev" }

[features]
default = []
mock-backend = []
real-archivist = ["lancedb", "arrow", "arrow-array", "arrow-schema", "candle-core", "candle-nn", "candle-transformers", "tokenizers", "reqwest", "serde"]
