[package]
name = "sprawl-archivist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng"] }
tracing.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo.workspace = true
async-trait = "0.1"
walkdir = "2.5.0"

# real-archivist feature deps
lancedb = { version = "0.31", optional = true }
arrow = { version = "58.3", optional = true }
arrow-array = { version = "58.3", optional = true }
arrow-schema = { version = "58.3", optional = true }
futures = { version = "0.3", optional = true }
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
tokenizers = { version = "0.23", optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }

[dev-dependencies]
tempfile = "3.10"
sprawl-dev = { path = "../sprawl-dev" }

[features]
default = []
mock-backend = []
real-archivist = ["dep:lancedb", "dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:futures", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:reqwest"]
