[package]
name = "sprawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.8", features = ["v4"] }
rusqlite = "0.31.0"
sprawl-sentinel = { path = "../sprawl-sentinel" }
sprawl-archaeologist = { version = "0.1.0", path = "../sprawl-archaeologist" }
sprawl-inference = { version = "0.1.0", path = "../sprawl-inference" }
sprawl-core = { version = "0.1.0", path = "../sprawl-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sprawl-plugin-host = { version = "0.1.0", path = "../sprawl-plugin-host" }
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
sprawl-tui = { version = "0.1.0", path = "../sprawl-tui" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
libc.workspace = true
sprawl-daemon = { version = "0.1.0", path = "../sprawl-daemon" }
sprawl-sweeper = { version = "0.1.0", path = "../sprawl-sweeper" }
sprawl-dev = { version = "0.1.0", path = "../sprawl-dev" }
sprawl-archivist = { version = "0.1.0", path = "../sprawl-archivist" }
arboard = "3.6.1"
which = "8.0.4"
sha2 = "0.11.0"
hex = "0.4.3"
walkdir = "2.5.0"

[features]
default = ["real"]
mock-backend = ["sprawl-inference/mock-backend", "sprawl-archivist/mock-backend", "sprawl-daemon/mock-backend"]
debug = ["mock-backend"]
real = ["real-inference", "real-archivist", "sprawl-daemon/real"]
real-inference = ["sprawl-inference/real-inference", "sprawl-daemon/real-inference"]
real-archivist = ["sprawl-archivist/real-archivist"]
