[package]
name = "sprawl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Ledger & Manifest (M3)
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
aead = "0.5"
keyring = "3"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
