[package]
name = "sprawl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
notify = "6"
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc.workspace = true
