[package]
name = "sprawl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
notify = "6"
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
sprawl-sentinel = { path = "../sprawl-sentinel" }
sprawl-archivist = { path = "../sprawl-archivist" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5.1"
sysinfo = "0.30.5"

[[bench]]
name = "cpu_idle_bench"
harness = false
