[package]
name = "sprawl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
sprawl-inference = { path = "../sprawl-inference" }
notify = "6"
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
sprawl-sentinel = { path = "../sprawl-sentinel" }
sprawl-archivist = { path = "../sprawl-archivist" }
rusqlite = "0.31.0"

[features]
default = ["real"]
mock-backend = ["sprawl-inference/mock-backend", "sprawl-archivist/mock-backend"]
real = ["real-inference", "real-archivist"]
real-inference = ["sprawl-inference/real-inference"]
real-archivist = ["sprawl-archivist/real-archivist"]

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5.1"
sysinfo.workspace = true

[[bench]]
name = "cpu_idle_bench"
harness = false
