[package]
name = "sprawl-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
sysinfo.workspace = true
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false, optional = true }
futures-util = { version = "0.3", optional = true }
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
tokenizers = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3.10"
sprawl-dev = { path = "../sprawl-dev" }

[features]
default = []
mock-backend = []
real-inference = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:reqwest",
    "dep:futures-util",
    "dep:sha2",
    "dep:hex",
]
