[package]
name = "sprawl-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true

# Use wasmtime for Component Model support
wasmtime = { version = "25.0", features = ["component-model"] }
wasmtime-wasi = "25.0"
tracing.workspace = true
