[package]
name = "sprawl-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true

# Use wasmtime for Component Model support
wasmtime = { version = "46.0", features = ["component-model"] }
wasmtime-wasi = "46.0"
tracing.workspace = true
ed25519-dalek = "2.1.1"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = "0.4.3"
