[package]
name = "sprawl-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1.10"
uuid.workspace = true
zeroize = { version = "1", features = ["zeroize_derive"] }
sprawl-inference = { path = "../sprawl-inference" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
