[package]
name = "sprawl-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sprawl-core = { path = "../sprawl-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1.10"
uuid.workspace = true
zeroize = { version = "1", features = ["zeroize_derive"] }
sprawl-inference = { path = "../sprawl-inference" }
sha2 = "0.10"
hex = "0.4"
chrono = { workspace = true }
serde_json.workspace = true
serde = { workspace = true }
keyring = "2.3"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sprawl-inference = { path = "../sprawl-inference", features = ["mock-backend"] }
sprawl-dev = { path = "../sprawl-dev" }

[features]
default = []
mock-backend = []
