[package]
name = "sprawl-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.2"
sprawl-sentinel = { path = "../sprawl-sentinel" }
sprawl-archivist = { path = "../sprawl-archivist" }
uuid = { workspace = true }
tokio = { workspace = true }
sprawl-daemon = { path = "../sprawl-daemon" }
futures = "0.3.32"

[features]
default = []
demo-data = []
